# flash-idea

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: release.yml
crates/feishu-client/: Cargo.toml
crates/feishu-client/examples/: diagnose.rs
crates/feishu-client/src/: lib.rs
docs/: chat-history.md  design.md  dev-plan.md  devlog.md  feishu-api.md  prd-v1-archived.md  visual-design.md
src/: app.js  index.html
src-tauri/: Cargo.toml  flashidea.sqlite  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  sync.rs
