[package]
name = "flash-idea"
version = "0.2.2"
description = "Flash Idea"
authors = ["Flash Idea"]
edition = "2021"

[lib]
name = "flash_idea_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
feishu-client = { path = "../crates/feishu-client" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4", "serde"] }

